--- a/config/development.env
+++ b/config/development.env
@@ -1,1 +1,6 @@
-MONGODB_URI=mongodb://localhost/micro001
+DB_TYPE=postgres
+DB_HOST=localhost
+DB_PORT=5432
+DB_USERNAME=postgres
+DB_PASSWORD=postgres
+DB_NAME=testdb
