--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "start": "cross-env NODE_ENV=development nest start",
     "start:dev": "cross-env NODE_ENV=development nest start --watch",
     "start:debug": "cross-env NODE_ENV=development nest start --debug --watch",
-    "start:prod": "cross-env NODE_ENV=development node dist/main",
+    "start:prod": "cross-env NODE_ENV=development pm2 start dist/src/main.js -i 0",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "cross-env NODE_ENV=development jest",
     "test:watch": "cross-env NODE_ENV=development jest --watch --maxWorkers=1",
@@ -37,6 +37,7 @@
     "joi": "^17.13.3",
     "mysql2": "^3.11.4",
     "pg": "^8.13.1",
+    "piscina": "^5.0.0-alpha.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
     "testcontainers": "^10.15.0",
