--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,7 +4,7 @@ default:
 
 # Cache dependencies
 cache:
-  key: ${CI_COMMIT_REF_SLUG}
+  key: cache-dependencies
   paths:
     - node_modules/
     - dist/
@@ -21,9 +21,8 @@ stages:
 
 # Install dependencies
 install_dependencies:
-  extends:
-    - .standard-rules
   stage: install
+  extends: .standard-rules
   script:
     - echo "Installing dependencies..."
     - npm ci
@@ -33,8 +32,7 @@ install_dependencies:
 # Build the project
 build_project:
   stage: build
-  extends:
-    - .standard-rules
+  extends: .standard-rules
   script:
     - echo "Building the project..."
     - npm run build
@@ -48,8 +46,7 @@ build_project:
 # Run tests
 run_tests:
   stage: test
-  extends:
-    - .standard-rules
+  extends: .standard-rules
   script:
     - echo "Running tests..."
     - npm run test
@@ -59,8 +56,7 @@ run_tests:
 
 # Optional: Linting stage
 lint_code:
-  extends:
-    - .standard-rules
+  extends: .standard-rules
   stage: test
   script:
     - echo "Running lint..."
