--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -26,7 +26,7 @@ install_dependencies:
   extends: .standard-rules
   script:
     - echo "Installing dependencies..."
-    - npm ci
+    - npm install
   cache:
     policy: pull-push
 
