--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,12 +1,6 @@
 # Use a Node.js Docker image
 image: node:18
 
-# Cache dependencies
-cache:
-  key: cache-dependencies
-  paths:
-    - node_modules/
-
 .standard-rules:
   rules:
     - if: $CI_MERGE_REQUEST_TARGET_BRANCH_NAME == "develop"
@@ -25,8 +19,10 @@ install_dependencies:
   script:
     - echo "Installing dependencies..."
     - npm ci
-  cache:
-    policy: push
+  artifacts:
+    paths:
+      - node_modules/
+    expire_in: 1 day
 
 # Build the project
 build_project:
@@ -35,8 +31,8 @@ build_project:
   script:
     - echo "Building the project..."
     - npm run build
-  cache:
-    policy: pull
+  dependencies:
+    - install_dependencies
   artifacts:
     paths:
       - dist/
@@ -50,8 +46,8 @@ run_tests:
     - echo "Running tests..."
     - npm run test
     - npm run test:e2e # Add this if you have e2e tests
-  cache:
-    policy: pull
+  dependencies:
+    - install_dependencies
 
 # Optional: Linting stage
 lint_code:
@@ -61,3 +57,5 @@ lint_code:
     - echo "Running lint..."
     - npm run lint
   allow_failure: true
+  dependencies:
+    - install_dependencies
