--- a/prometheus.yml
+++ b/prometheus.yml
@@ -1,11 +1,11 @@
 global:
-  scrape_interval: 15s  # Tần suất thu thập dữ liệu
+  scrape_interval: 15s
 
 scrape_configs:
   - job_name: 'prometheus'
     static_configs:
-      - targets: ['localhost:9090']  # Theo dõi chính Prometheus
+      - targets: ['localhost:9090']
 
   - job_name: 'node_exporter'
     static_configs:
-      - targets: ['host.docker.internal:9100']  # Theo dõi server bằng Node Exporter
+      - targets: ['host.docker.internal:9100']
