--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-version: "3"
 
 services:
   app:
@@ -12,10 +11,13 @@ services:
       - postgres
       - redis
       - kafka
-    environment:
-      - DATABASE_URL=postgresql://postgres:postgres@postgres:5432/testdb
-      - REDIS_URL=redis://redis:6379
-      - KAFKA_URL=kafka:29092
+    # environment:
+      # - DATABASE_URL=postgresql://postgres:postgres@postgres:5432/testdb
+      # - REDIS_URL=redis://redis:6379
+      # - KAFKA_URL=kafka:29092
+    env_file:
+      - .env
+    build: .
   redis:
     container_name: test-redis
     image: redis
