--- a/package.json
+++ b/package.json
@@ -29,17 +29,23 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/mapped-types": "^2.0.6",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/platform-socket.io": "^11.0.11",
+    "@nestjs/platform-ws": "^11.0.11",
     "@nestjs/typeorm": "^10.0.2",
+    "@nestjs/websockets": "^11.0.11",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "cross-env": "^7.0.3",
     "dotenv": "^16.4.5",
+    "ioredis": "^5.6.0",
     "joi": "^17.13.3",
     "mysql2": "^3.11.4",
     "pg": "^8.13.1",
     "piscina": "^5.0.0-alpha.0",
+    "redis": "^4.7.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
+    "socket.io": "^4.8.1",
     "testcontainers": "^10.15.0",
     "typeorm": "^0.3.20"
   },
